--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flyme/skynet-db",
-  "version": "1.5.0",
+  "version": "1.7.3",
   "description": "skynet项目mogodb数据库处理的公共模块",
   "main": "lib/service.js",
   "scripts": {
@@ -11,16 +11,14 @@
     "db"
   ],
   "publishConfig": {
-    "registry": "http://appff.meizu.com:8888"
+    "registry": "http://appff.meizu.com:8888/"
   },
   "author": "guangjie",
   "license": "ISC",
-  "publishConfig": {
-    "registry": "http://appff.meizu.com:8888/"
-  },
   "dependencies": {
     "@flyme/skynet-utils": "^1.0.4",
-    "async": "^2.1.4",
-    "mongoose": "^4.8.2"
+    "async": "^2.0.1",
+    "mongoose": "^4.13.14",
+    "node-schedule": "^1.1.1"
   }
 }
